shipwright-liveview/shipwright-liveview-macros/tests/compile_fail/invalid_boolean_attribute.rs
use shipwright_liveview_macros::html;

fn main() {
    // This should fail: boolean attributes should not have non-matching values
    let _ = html! {
        <input checked="true" />
    };
}